--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         <table id="Tabla">
             <tr>
 
-                <td id="c0"></td>
-                <td id="c1"></td>
-                <td id="c2"></td>
+                <td id="c0"><img src="imagenes/c0.png"></td>
+                <td id="c1"><img src="imagenes/c1.png"></td>
+                <td id="c2"><img src="imagenes/c2.png"></td>
 
 
             </tr>
             <tr>
 
-                <td id="c3"></td>
-                <td id="c4"></td>
-                <td id="c5"></td>
+                <td id="c3"><img src="imagenes/c3.png"></td>
+                <td id="c4"><img src="imagenes/c4.png"></td>
+                <td id="c5"><img src="imagenes/c5.png"></td>
 
 
             </tr>
             <tr>
 
-                <td id="c6"></td>
-                <td id="c7"></td>
-                <td id="c8"></td>
+                <td id="c6"><img src="imagenes/c6.png"></td>
+                <td id="c7"><img src="imagenes/c7.png"></td>
+                <td id="c8" class="vacio"></td> <!-- hueco vacío -->
 
 
             </tr>
@@ -52,6 +52,7 @@
            <!--
                 btnInicio: click -> piezas mezcladas
                 btnPiezas
+                btnPiezas: click para moverlas, la pieza y el espacio intercambian lugares
 
            -->
 
