--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 
         </table>
 
+        
+        <!-- ------------ CONTADOR MOVIMIENTOS ------------- -->
+            <div id="contador" class="contador">Movimientos: </div>
+
+        <!-- ------------ CONTADOR TIEMPO ------------- -->
+            <div id="tiempo" class="tiempo">Tiempo: </div>
+
+
 
 
         <!--   --------------BOTONES---------  -->
@@ -53,12 +61,13 @@
                 btnInicio: click -> piezas mezcladas
                 btnPiezas
                 btnPiezas: click para moverlas, la pieza y el espacio intercambian lugares
-
            -->
-
-           <div class="botones">
+        <div class="botones">
                 <button id="btnInicio" class="btnInicio">INICIAR</button>
            </div>
+            <!-- -----------GUARDAR Y CARGAR PARTIDA -------------------->
+             <div id="btnGuardar" class="btnGuardar">Guardar partida</div>
+             <div id="btnCargar" class="btnCargar">Cargar partida</div>
 
        </div>
 
