--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <td id="c6"><img src="imagenes/c6.png"></td>
                 <td id="c7"><img src="imagenes/c7.png"></td>
-                <td id="c8" class="vacio"></td> <!-- hueco vacío -->
+                <td id="c8"><img src="imagenes/c8Vacio.png"></td> <!-- hueco vacío -->
 
 
             </tr>
